# sequential-thinking-mcp-python

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  client.py  main.py  server.py  thinking.py
